Updated README according to a new youtube video

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Development of File Manager on youtube:
 
 1. 30 Jun 2012, Fixing bugs, http://youtu.be/UaEGT60k2xA
+2. 15 Jul 2012, New grid, http://youtu.be/ukDWIo6e6Tc
